<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#ffffff">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:layout_margin="100dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/emma_logo" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/shadow"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextColor="@color/white2"
                    app:startIconDrawable="@drawable/email_img"
                    app:boxBackgroundColor="@color/white2"

                    app:startIconContentDescription="@string/Login_email_icon_description"
                    android:hint="@string/Login_email_hint_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_user_id"
                        android:text="a@a.com"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/Login_password_hint_text"
                    app:startIconDrawable="@drawable/password_img"
                    app:endIconDrawable="@drawable/visibility_img"
                    app:endIconMode="password_toggle"
                    app:boxBackgroundColor="@color/white2"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_user_pw"
                        android:text="aaaaaa"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="MaterialCon"
                app:icon="@drawable/login_img"
                app:backgroundTint="@color/colorPrimaryDark"
                app:iconGravity="start"
                android:textSize="18sp"
                app:cornerRadius="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/Login_button_text"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:iconGravity="textStart"
                app:icon="@drawable/join_img"
                app:iconTint="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_account"
                android:text="@string/Login_membershipJoin_text"
                android:textColor="@color/white" />

        </LinearLayout>
        <include
            android:id="@+id/login_loading_layout"
            android:visibility="invisible"
            layout="@layout/loading_layout"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>