<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="3dp"
    android:paddingEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/left_bottom_shadow">
    <LinearLayout
        android:id="@+id/date_layout"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:elevation="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/calendar_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="10dp"
            android:text="@string/history_fragment_date_title_text"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/date_text"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="sample_text"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/heart_rate_layout"
        android:background="@drawable/other_shadow"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/heart_rate_img"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:id="@+id/heart_rate_text"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:text="sample_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:text="@string/history_fragmnet_heart_rate_title_text"
            android:textStyle="bold"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/stress_layout"
        android:background="@drawable/other_shadow"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/stressimg"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/stress_text"
            android:layout_gravity="center_vertical"
            android:text="sample_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text="@string/history_fragmnet_stress_title_text"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/blood_pressure_layout"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/other_shadow"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/bloodpressur"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:id="@+id/blood_pressure_text"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="sample_text"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:text="@string/history_fragment_heate_pressure_title_text"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>