<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_control_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2e2e2"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_control"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_fan"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gray_circle"
                android:text="FAN\nOFF"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_heater"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:background="#9ee3ff"
                android:text="HEAT\nOFF"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="110dp" />

        <Button
            android:id="@+id/btn_measure_start"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#9ee3ff"
            android:text="@string/label_measure_start"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tv_btn_eng_mode_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_eng_mode_start"
            android:textColor="@android:color/darker_gray"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="255"
        android:background="@android:color/background_dark"
        android:orientation="horizontal"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:foregroundTint="#9ee3ff"
                android:foregroundTintMode="src_atop" />

            <TextView
                android:id="@+id/tv_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_measuring"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ecg_hr"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_ppg_hr"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_measuring"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_eng_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_ecg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:visibility="visible"></com.github.mikephil.charting.charts.LineChart>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_ppg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

        </com.github.mikephil.charting.charts.LineChart>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_eng_ppg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_eng_mode_end"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:text="@string/label_eng_mode_end"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>